# hackathon-4-course-companion

./: .gitignore  AGENTS.md  CLAUDE.md  FEATURES.md  intelligent-features.md  todo.md
backend/: .env.example  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 001_create_users_table.py  002_add_progress_and_streaks.py  003_add_stripe_billing.py
backend/src/: main.py
backend/src/core/: auth.py  config.py  dependencies.py
backend/src/db/: engine.py  models.py
backend/src/models/: access.py  billing.py  content.py  progress.py  quiz.py  search.py  users.py
backend/src/routers/: access.py  auth.py  billing.py  content.py  progress.py  quizzes.py  search.py  users.py
backend/src/services/: access.py  billing.py  content.py  progress.py  quiz.py  search.py  users.py
backend/test/: test_auth_connected_apps.py
backend/tests/: conftest.py  test_content.py  test_quizzes.py
backend/tests/integration/: test_access.py  test_progress.py  test_search.py  test_users_me.py
backend/tests/unit/: test_auth.py  test_auth_sessions.py  test_billing.py  test_config.py  test_streak_logic.py
chatgpt-app/server/: .env.example  app.py  pyproject.toml  vercel.json
chatgpt-app/server/src/: auth.py  client.py  errors.py  main.py  tool_metadata.py  ui.py
chatgpt-app/server/src/core/: config.py
chatgpt-app/server/src/models/: __init__.py  access.py  chapters.py  error.py  progress.py  quiz.py  (+1 more)
chatgpt-app/server/tests/: conftest.py  test_access.py  test_chapters.py  test_metadata.py  test_oauth.py  test_progress.py  test_quiz.py  test_search.py
(+229 files in other folders)
